# pre-commit-git-clang-format

./: .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
