[metadata]
name = Git-Clang-Format
version = 0.0.0
description = pre-commit hook for git-clang-format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vmudrykPersonal/pre-commit-git-clang-format
author = Valentyn Mudryk
author_email = mudrikval42@gmail.com
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires =
    clang-format==16.0.1
# Follows pre-commit minimums
python_requires = >=3.7